--- a/.env.demo
+++ b/.env.demo
@@ -2,3 +2,4 @@ JWT_SECRET= your_jwt_secret
 JWT_EXPIRES_IN= 7d
 MONGO_URI= your mongodb url or cluster string
 PORT= 7000
+FRONTEND_URL = your frontend url (http://localhost:5173/)
